@@ -1,5 +1,12 @@
 2008-12-01  Stefan Kost  <ensonic@users.sf.net>
 
+	* gtkdoc-scangobj.in:
+	* gtkdoc-scanobj.in:
+	  Reintroduce "sh -c" and comment why its used. Add real libtool support
+	  to old scanobj tool as well.
+
+2008-12-01  Stefan Kost  <ensonic@users.sf.net>
+
 	patch by: Matthias Clasen  <mclasen@redhat.com>
 
 	* gtkdoc-mkdb.in:
